2001-08-08	<garetxe@users.sf.net>

	* Made prepare_dist work properly, rte.rpm and mp1e.rpm can be
	generated now.

2001-08-07	<mschimek@users.sf.net>

	* rte: output error caused hang, ssize_t typo. Todo: MPEG plugin
	  should abort on error.
	* Deleted old fifo code.