@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.2 2001-08-08 23:01:57 garetxe Exp $
+dnl $Id: configure.in,v 1.3 2001-08-19 10:58:34 mschimek Exp $
 
 AC_INIT(configure.in)
 AM_INIT_AUTOMAKE(rte, 0.3)
@@ -21,6 +21,9 @@ test -e site_def.h || cat <<EOF >site_def.h
 EOF
 
 AC_PROG_CC
+
+dnl Check whether program_invocation_name exists, GNU extension
+AC_CHECK_FUNCS(program_invocation_name)
 
 AC_OUTPUT([
 Makefile
