@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.2 2001-08-08 23:01:58 garetxe Exp $
+dnl $Id: configure.in,v 1.3 2001-08-19 10:58:34 mschimek Exp $
 
 AC_INIT(configure.in)
 AM_INIT_AUTOMAKE(mp1e, 1.9pre2)
@@ -82,6 +82,9 @@ esac
 AC_PROG_CC
 
 AC_CHECK_FUNCS(memalign)
+
+dnl fifo.c
+AC_CHECK_FUNCS(program_invocation_name)
 
 AC_DEFINE(ENABLE_V4L, 1, [For Z/VBI])
 AC_DEFINE(NO_TVENG_H, 1, [For Z/VBI])
