@@ -18,7 +18,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: mpeg2.c,v 1.2 2001-08-08 05:24:36 mschimek Exp $ */
+/* $Id: mpeg2.c,v 1.3 2001-08-19 10:58:35 mschimek Exp $ */
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -306,6 +306,9 @@ mpeg2_program_stream_mux(void *muxp)
 	buffer *buf;
 	stream *str;
 
+	pthread_cleanup_push((void (*)(void *)) pthread_rwlock_unlock, (void *) &mux->streams.rwlock);
+	assert(pthread_rwlock_rdlock(&mux->streams.rwlock) == 0);
+
 	{
 		double preload_delay;
 		double video_frame_rate = DBL_MAX;
@@ -499,7 +502,7 @@ reschedule:
 
 	mux_output(buf);
 
+	pthread_cleanup_pop(1);
+
 	return NULL;
 }
-
-
