@@ -18,7 +18,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: systems.h,v 1.3 2001-08-08 05:37:54 mschimek Exp $ */
+/* $Id: systems.h,v 1.4 2001-08-19 10:58:35 mschimek Exp $ */
 
 #include "libsystems.h"
 
@@ -62,7 +62,8 @@ struct stream {
 };
 
 struct multiplexer {
-	list			streams;
+	xlist			streams;
+
 	fifo *			output;
 	producer 		prod;
 
